--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
       <title>Jiayu Liu's Portfolio</title>
     
       <!-- If you are using CSS version, only link these 2 files, you may add app.css to use for your overrides if you like. -->
+      <link href="favicon.ico" type="image/x-icon" rel=icon>
+        <link href="favicon.ico" type="image/x-icon" rel="shortcut icon">
       <link rel="stylesheet" href="css/normalize.css">
       <link rel="stylesheet" href="css/foundation.css">
       <link rel="stylesheet" href="css/custom.css">
